tests/src/frontend/syntax/invalid/type_constant_with_constraint_and_initializer.sk
class C {} {
  type TID  : UNSAFE_TYPE_HH_FIXME = UNSAFE_TYPE_HH_FIXME;
}

fun main(): String {
  ""
}
